Query restaurants by Owner and all restaurants
